@@ -3,10 +3,6 @@ Wyrd To-Do list
 
 * Add commands to jump to the next/previous reminder in time.
 
-* Add a TAG handler that hides reminders from counting towards the
-  calendar coloration.  (Are there any other TAG options that could
-  be useful?).
-
 * Consider incremental searching.
 
 * Consider an Orpie-like abbreviation syntax for inputting commands.
